Configurações do firebase

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="O marcador de truco oficial do Kasinao." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasinao Truco</title>
   </head>
